Merge of recent changes from dev_events branch to trunk:
Edit Event
 - fixed NullPointerException -- meetings created in UniTime 3.3 do not have start/stop offsets filled in
 - merged from dev_events, revision 3141

Events: Approve Dialog
 - fixed dialog height in FireFox
 - merged from dev_events, revision 3142

GWT Events
 - added ability to display note in the List of Events, List of Meetings, and Relations tables 
  - for courses and classes (Relations) -- schedule of classes note and student schedule notes are displayed respectively
  - for class events a combination of both notes (schedule of classes note and student schedule note) is displayed
  - for all other events, event note (or notes, if present) are displayed
 - merged from dev_events, revision 3161

GWT Events: Curriculum Timetable
 - if there is a curriculum reservation for the curriculum (or curriculum and classification) that is being displayed, only show classes meeting the reservation
   - if there is no reservation, but some classes are blocked by some other curriculum reservation, all classes of the offering will still be displayed (it only considers matching reservations)
 - show course name based on the curriculum (in case of a cross-list, not all the course names)
 - merged from dev_events, revision 3162

Localization -- message import
 - UniTime version increased to 3.4
 - do not import empty translations
 - merged from dev_events, revision 3165

GWT Events
 - added Czech translations
 - merged from dev_events, revision 3166

GWT Events
- fixed midnight / noon swap problem (in some cases noon end time was displayed as midnight)
- fixed the occasional unable to hide academic session problem
- few tweaks in the Czech translations
- resource and event types/names can now be localized (or renamed)
- week selection can now be localized (there was a code expecting MM/dd format)
- it is also possible to define whether day is displayed before month or the other way around (e.g., in the grid)
- inst